# reinforcement-with-llm

./: .env.example  .gitignore  AGENTS.md  CHECKPOINT_USAGE.md  README.md  RESEARCH.md  STUDY.md  pyproject.toml  requirements.txt
logs/: py.log.2025-09-30
references/: router_r1_by_codex.py
scripts/: edit_document.py  edit_document_a2c.py  edit_document_dqn.py  edit_document_offline.py  edit_document_ppo.py  evaluate_document.py  generate_dataset.py  reconstruct_text_with_llm.py
scripts/dataset_builder/: add_noise.py  crawl.py  excel_to_json.py  generate_dataset.py  reconstruct.py  reconstruct_text_with_llm.py
scripts/runner/: hybrid_editor.py
scripts/test/: evaluate_document.py
scripts/train_eval/: a2c.py  dqn.py  ppo.py  ppo_offline.py
scripts/visualizer/: action_patterns.py  train_log_a2c.py  train_log_dqn.py  train_log_ppo.py  train_log_ppo_offline.py  visualize_train.py  visualize_train_dqn.py
src/: add_noise.py  doc_proofreading.py  edit_document.py  edit_document_offline.py  evaluate_document.py  generate_dataset.py  reconstruct_text_with_llm.py  router_nn.py  router_r1.py  test_reconstruct.py  visualize_action_patterns.py  visualize_impact.py
src/!old/: news_recommend_rl.py
src/config/: paths.py
src/dataloader/: cache_loader.py  load.py  offline_loader.py  reconstruct_loader.py
src/dataset/: reconstruct_document.py  reconstructor.py
src/document/: main.py  main_q_learning.py  ppo_skeleton.py
src/eval/: abstractcollector.py  eval.py  evaluation_model_500.json  paper_500_crawl.json  paper_abstract.json
src/helpers/: abstractcollector.py
(+29 files in other folders)
